fix: search button alignment

--- a/static/style.css
+++ b/static/style.css
@@ -104,6 +104,7 @@ button:hover,
   position: absolute;
   right: 0;
   top: 0;
+  bottom: 0;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
